--- a/index.html
+++ b/index.html
@@ -493,8 +493,8 @@
                         🌐
                     </div>
                     <h3 class="text-lg font-bold mb-2">Hosting Incluido</h3>
-                    <p class="text-slate-400 text-sm mb-4">Tu proyecto siempre online, rápido y seguro 24/7</p>
-                    <span class="text-xl font-bold text-green-400">Gratis</span>
+                    <p class="text-slate-400 text-sm mb-4">Publicación en servidores gratuitos confiables</p>
+                    <span class="text-xl font-bold text-green-400">Incluido</span>
                 </div>
                 
                 <!-- Capacitación -->
@@ -644,7 +644,7 @@
                             <span class="text-green-400">✓</span> Diseño responsive
                         </li>
                         <li class="flex items-center gap-2 text-sm">
-                            <span class="text-green-400">✓</span> Hosting incluido
+                            <span class="text-green-400">✓</span> Publicación online
                         </li>
                         <li class="flex items-center gap-2 text-sm text-slate-500">
                             <span>✗</span> Panel de administración
@@ -688,6 +688,7 @@
                             <span class="text-green-400">✓</span> Capacitación incluida
                         </li>
                     </ul>
+                    <p class="text-xs text-slate-500 mb-4 text-center">* Publicación en hosting gratuito</p>
                     <a href="https://wa.me/5350121476?text=Hola%2C%20me%20interesa%20el%20plan%20Profesional%20de%20tienda%20online%20%28%24100%29" target="_blank" class="block w-full py-3 text-center bg-gradient-to-r from-purple-500 to-pink-500 rounded-xl font-semibold hover:opacity-90 transition">
                         Elegir Plan
                     </a>
@@ -723,9 +724,24 @@
                             <span class="text-green-400">✓</span> Soporte prioritario
                         </li>
                     </ul>
+                    <p class="text-xs text-slate-500 mb-4 text-center">* Dominio pagado por el cliente</p>
                     <a href="https://wa.me/5350121476?text=Hola%2C%20me%20interesa%20el%20plan%20Premium%20de%20tienda%20online%20%28%24200%29" target="_blank" class="block w-full py-3 text-center border border-white/20 rounded-xl font-semibold hover:bg-white/10 transition">
                         Elegir Plan
                     </a>
+                </div>
+            </div>
+            
+            <!-- Hosting Note -->
+            <div class="mt-8 scroll-fade">
+                <div class="bg-blue-500/10 border border-blue-500/20 rounded-2xl p-6 text-center">
+                    <div class="flex items-center justify-center gap-3 mb-3">
+                        <span class="text-2xl">ℹ️</span>
+                        <h4 class="font-semibold text-lg">Sobre el Hosting</h4>
+                    </div>
+                    <p class="text-slate-400 text-sm max-w-2xl mx-auto">
+                        Todos los planes incluyen <strong class="text-white">publicación en servidores gratuitos confiables</strong> (GitHub Pages, Netlify, Firebase). 
+                        Si tu negocio crece y necesitas hosting premium con más capacidad, lo gestionamos con el <strong class="text-white">plan de mantenimiento mensual</strong>.
+                    </p>
                 </div>
             </div>
         </div>
